--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div class="iphone">
-        <div class="background"></div>
+        <div class="background bg01"></div>
         <div class="status-bar">
           <div class="left">
             <ul class="signal">
